--- a/src/cli-deps-satellites/src/Microsoft.CodeAnalysis.VisualBasic/VBResources.ja.resx
+++ b/src/cli-deps-satellites/src/Microsoft.CodeAnalysis.VisualBasic/VBResources.ja.resx
@@ -231,6 +231,9 @@
   <data name="ERR_GotoIntoFor" xml:space="preserve">
     <value>'{0}' は、このステートメントを含まない 'For' または 'For Each' ステートメントの内側にあるため、'GoTo {0}' は有効ではありません。</value>
   </data>
+  <data name="IArgumentIsNotVisualBasicArgument" xml:space="preserve">
+    <value>{0} は Visual Basic の有効な引数ではありません</value>
+  </data>
   <data name="WRN_DefAsgUseNullRefStr_Title" xml:space="preserve">
     <value>変数が、値が割り当てられる前に使用されています</value>
   </data>
@@ -447,7 +450,7 @@
     <value>アセンブリ参照 '{0}' は無効なため、解決できません。</value>
   </data>
   <data name="ERR_DuplicateAccessCategoryUsed" xml:space="preserve">
-    <value>'Public'、'Private'、'Protected'、'Friend'、または 'Protected Friend' は、いずれか 1 つしか指定できません。</value>
+    <value>'Public'、'Private'、'Protected'、'Friend'、'Protected Friend'、または 'Private Protected' は、いずれか 1 つしか指定できません。</value>
   </data>
   <data name="WRN_LambdaPassedToRemoveHandler_Title" xml:space="preserve">
     <value>ラムダ式はこのイベント ハンドラーから削除されません</value>
@@ -717,6 +720,9 @@
   <data name="ERR_PropertyNameConflictInMyCollection" xml:space="preserve">
     <value>'{0}' は 'My' グループ内で公開されている型 '{1}' に使用されるメンバーと同じ名前です。型またはそれを囲む名前空間の名前を変更してください。</value>
   </data>
+  <data name="ERR_ExpectedNamedArgumentInAttributeList" xml:space="preserve">
+    <value>名前付き引数が必要です。</value>
+  </data>
   <data name="ERR_NameNotEvent2" xml:space="preserve">
     <value>'{0}' は '{1}' のイベントではありません。</value>
   </data>
@@ -752,6 +758,9 @@
   </data>
   <data name="ERR_VarianceOutParamDisallowed1" xml:space="preserve">
     <value>'{0}' は 'Out' 型パラメーターであるため、このコンテキストでは型 '{0}' を使用できません。</value>
+  </data>
+  <data name="ERR_InvalidDebugInfo" xml:space="preserve">
+    <value>メソッド '{0}' (トークン 0x{1}) のデバッグ情報をアセンブリ '{2}' から読み取ることができません</value>
   </data>
   <data name="ERR_DefaultMissingFromProperty2" xml:space="preserve">
     <value>'{0}' と '{1}' では、一方のみが 'Default' に宣言されているため、お互いをオーバーロードすることはできません。</value>
@@ -800,6 +809,9 @@
   </data>
   <data name="ERR_QueryOperatorNotFound" xml:space="preserve">
     <value>メソッド '{0}' の定義には、このコンテキストではアクセスできません。</value>
+  </data>
+  <data name="IConversionExpressionIsNotVisualBasicConversion" xml:space="preserve">
+    <value>{0} は Visual Basic の有効な変換式ではありません</value>
   </data>
   <data name="ERR_InaccessibleMember3" xml:space="preserve">
     <value>'{0}.{1}' は '{2}' であるため、このコンテキストではアクセスできません。</value>
@@ -946,6 +958,9 @@
   </data>
   <data name="WRN_IfTooManyTypesObjectAssumed" xml:space="preserve">
     <value>複数の型が考えられるため、共通型を推論できません。'Object' と見なされます。</value>
+  </data>
+  <data name="FEATURE_LeadingDigitSeparator" xml:space="preserve">
+    <value>先頭の桁区切り記号</value>
   </data>
   <data name="ERR_ExpectedStringLiteral" xml:space="preserve">
     <value>文字列定数を指定してください。</value>
@@ -1446,6 +1461,9 @@
   <data name="ERR_RedimNoSizes" xml:space="preserve">
     <value>'ReDim' ステートメントには、配列の各次元の新しい境界の一覧をかっこで囲んだものが必要です。</value>
   </data>
+  <data name="ERR_BadNonTrailingNamedArgument" xml:space="preserve">
+    <value>名前付き引数 '{0}' の場所が正しくありません。後ろに名前なし引数があります</value>
+  </data>
   <data name="ERR_InvalidAttributeUsageOnAccessor" xml:space="preserve">
     <value>属性 '{0}' を '{2}' の '{1}' に適用できません。この属性はこの種類の宣言では有効ではありません。</value>
   </data>
@@ -1912,7 +1930,7 @@
     <value>'End Set' の前には、対応する 'Set' を指定しなければなりません。</value>
   </data>
   <data name="ERR_CannotEmbedWithoutPdb" xml:space="preserve">
-    <value>/embed スイッチは、ポータブル PDB の生成時にのみサポートされます (/debug:portable または /debug:embedded)。</value>
+    <value>/embed スイッチは、PDB を生成する場合にのみサポートされます。</value>
   </data>
   <data name="WRN_VarianceDeclarationAmbiguous3" xml:space="preserve">
     <value>インターフェイス '{0}' は、'{2}' の 'In' および 'Out' パラメーターが原因で、実装されている別のインターフェイス '{1}' に対してあいまいです。</value>
@@ -2221,6 +2239,9 @@
   </data>
   <data name="ERR_InvInsideInterface" xml:space="preserve">
     <value>ステートメントをインターフェイス本体内部に記述することはできません。</value>
+  </data>
+  <data name="ERR_NamedArgumentSpecificationBeforeFixedArgumentInLateboundInvocation" xml:space="preserve">
+    <value>遅延バインディングの呼び出しでは、すべての固定引数を指定した後で名前付き引数を指定する必要があります。</value>
   </data>
   <data name="ERR_NamedParamNotFound1" xml:space="preserve">
     <value>'{0}' はメソッド パラメーターではありません。</value>
@@ -2533,6 +2554,9 @@
   </data>
   <data name="ERR_ContinueWhileNotWithinWhile" xml:space="preserve">
     <value>'Continue While' は、'While' ステートメント内でのみ使用できます。</value>
+  </data>
+  <data name="FEATURE_PrivateProtected" xml:space="preserve">
+    <value>Private Protected</value>
   </data>
   <data name="ERR_TooManyArgs2" xml:space="preserve">
     <value>'{1}' で定義された拡張メソッド '{0}' の引数が多すぎます。</value>
@@ -3955,7 +3979,7 @@
     <value>メソッドに ParamArray と省略可能なパラメーターの両方を指定することはできません。</value>
   </data>
   <data name="ERR_StructureCantUseProtected" xml:space="preserve">
-    <value>構造体のメソッドを 'Protected' または 'Protected Friend' として宣言することはできません。</value>
+    <value>構造体のメソッドを 'Protected'、'Protected Friend' または 'Private Protected' として宣言することはできません。</value>
   </data>
   <data name="WRN_QueryMissingAsClauseinVarDecl" xml:space="preserve">
     <value>型を推論できないため、範囲変数は Object 型と見なされます。'As' 句を使って異なる型を指定してください。</value>
@@ -3965,6 +3989,9 @@
   </data>
   <data name="ERR_PartialTypeBadMustInherit1" xml:space="preserve">
     <value>'MustInherit' は、その他の partial 型の 1 つに指定された 'NotInheritable' と組み合わせて使用できないので、partial 型 '{0}' に指定できません。</value>
+  </data>
+  <data name="IDS_LangVersions" xml:space="preserve">
+    <value>サポートされる言語バージョン:</value>
   </data>
   <data name="ERR_RemoveParamWrongForWinRT" xml:space="preserve">
     <value>Windows ランタイム イベントでは、'RemoveHandler' メソッド パラメーターの型を 'EventRegistrationToken' にする必要があります</value>
@@ -4329,7 +4356,7 @@
 
                                   - 出力ファイル -
 /out:&lt;file&gt;                       出力ファイル名を指定します。
-/target:exe                       コンソール アプリケーションを作成します (既定)。 
+/target:exe                       コンソール アプリケーションを作成します (既定)。
                                   (短い形式: /t)
 /target:winexe                    Windows アプリケーションを作成します。
 /target:library                   ライブラリ アセンブリを作成します。
@@ -4345,8 +4372,8 @@
                                   - 入力ファイル -
 /addmodule:&lt;file_list&gt;            指定されたモジュールからメタデータを参照します
 /link:&lt;file_list&gt;                 指定された相互運用アセンブリから 
-                                  メタデータを埋め込みます。 (短い形式: /l)
-/recurse:&lt;wildcard&gt;               ワイルドカードの指定に従い、
+                                  メタデータを埋め込みます。(短い形式: /l)
+/recurse:&lt;wildcard&gt;               ワイルドカードの指定に従い、 
                                   現在のディレクトリとサブディレクトリ内の
                                   すべてのファイルをインクルードします。
 /reference:&lt;file_list&gt;            指定されたアセンブリから 
@@ -4362,8 +4389,8 @@
                                   リンクします。
                                   resinfo:&lt;file&gt;[,&lt;name&gt;[,public|private]] 
                                   (短い形式: /linkres)
-/nowin32manifest                  出力 PE のマ二フェスト セクションに既定の 
-                                  マ二フェストを埋め込んではいけません。
+/nowin32manifest                  出力 PE のマニフェスト セクションに既定の 
+                                  マニフェストを埋め込んではいけません。
 /resource:&lt;resinfo&gt;               指定されたファイルを 
                                   埋め込みアセンブリ リソースとして追加します。
                                   resinfo:&lt;file&gt;[,&lt;name&gt;[,public|private]] 
@@ -4379,16 +4406,16 @@
 /removeintchecks[+|-]             整数のチェックを削除します。既定値は Off です。
 /debug[+|-]                       デバッグ情報を生成します。
 /debug:full                       完全なデバッグ情報を生成します (既定値)。
-/debug:pdbonly                    PDB ファイルのみを生成します。
+/debug:pdbonly                    完全なデバッグ情報を生成します。
 /debug:portable                   クロスプラットフォーム デバッグ情報を生成します。
-/debug:embedded                   クロスプラットフォーム デバッグ情報を
+/debug:embedded                   クロスプラットフォーム デバッグ情報を 
                                   ターゲット .dll または .exe 内に生成します。
 /deterministic                    決定論的アセンブリを作成します
                                   (モジュール バージョン GUID やタイムスタンプなど)
-/refonly                          メイン出力の代わりに参照アセンブリを生成します。
+/refonly                          メイン出力の代わりに参照アセンブリを生成します
 /instrument:TestCoverage          カバレッジ情報を収集するようにインストルメント
-                                  されたアセンブリを生成します。
-/sourcelink:&lt;file&gt;                ポータブル PDB に埋め込むソース リンク情報。
+                                  されたアセンブリを生成します
+/sourcelink:&lt;file&gt;                PDB に埋め込むソース リンク情報。
 
                                   - エラーと警告 -
 /nowarn                           すべての警告を無効にします。
@@ -4404,22 +4431,24 @@
 
                                   - 言語 -
 /define:&lt;symbol_list&gt;             条件付きコンパイル シンボルをグローバルに宣言 
-                                  します。symbol_list:name=value,... 
+                                  します。 symbol_list:name=value,... 
                                   (短い形式: /d)
 /imports:&lt;import_list&gt;            参照されたメタデータ ファイルの 
                                   名前空間に対して Imports をグローバルに宣言します。 
                                   import_list:namespace,...
-/langversion:&lt;number&gt;             言語バージョンを指定します: 
-                                  9|9.0|10|10.0|11|11.0|12|12.0|14|14.0|15|
-                                  15.0|15.3|default|latest
-/optionexplicit[+|-]              変数の明示的な宣言を必須にします。
+/langversion:?                    言語バージョンに許容される値を表示します
+/langversion:&lt;string&gt;             `default` (最新のメジャー バージョン)や
+                                  `latest` (マイナー バージョンを含む最新バージョン) 
+                                  または、`14` や `15.3`などの特定バージョン
+                                  で言語バージョンを指定します。
+/optionexplicit[+|-]              変数の明示的な宣言が必要です。
 /optioninfer[+|-]                 変数の型の推定を許可します。
 /rootnamespace:&lt;string&gt;           すべての型宣言に対して 
                                   ルート名前空間を指定します。
 /optionstrict[+|-]                厳密な言語セマンティクスを適用します。
-/optionstrict:custom              厳密な言語セマンティクスが 
+/optionstrict:custom              厳密な言語セマンティクスが
                                   守られていないときに警告します。
-/optioncompare:binary             バイナリ スタイルの文字列比較を指定します。 
+/optioncompare:binary             バイナリ スタイルの文字列比較を指定します。
                                   これは既定値です。
 /optioncompare:text               テキスト スタイルの文字列比較を指定します。
 
@@ -4436,16 +4465,16 @@
 /baseaddress:&lt;number&gt;             ライブラリまたはモジュールのベース アドレス 
                                   (16 進)。
 /checksumalgorithm:&lt;alg&gt;          PDB に格納されているソース ファイルのチェックサム 
-                                  を計算するアルゴリズムを指定します。サポートされる値:
+                                  checksum を計算するアルゴリズムを指定します。サポートされる値:
                                   SHA1 (既定) や SHA256。
-/codepage:&lt;number&gt;                ソース ファイルを開くときに使用するコード ページを 
+/codepage:&lt;number&gt;               ソース ファイルを開くときに使用するコード ページを 
                                   指定します。
 /delaysign[+|-]                   アセンブリの遅延署名には厳密な名前キーのうち
                                   公開された部分のみを使用します。
-/publicsign[+|-]                  厳密な名前のキーの公開部分のみを使ってアセンブリ
+/publicsign[+|-]                  厳密な名前キーの公開部分のみを使ってアセンブリ
                                   を公開署名します。
 /errorreport:&lt;string&gt;             内部コンパイラ エラーの処理方法を指定
-                                  します。prompt、send、none、queue 
+                                  します。prompt、send、none、queue
                                   (既定) のいずれかでなければなりません。
 /filealign:&lt;number&gt;               出力ファイル セクションで使う配置 
                                   を指定します。
@@ -4455,14 +4484,14 @@
 /libpath:&lt;path_list&gt;              メタデータ参照を検索する 
                                   ディレクトリの (セミコロン区切りの) リスト。
 /main:&lt;class&gt;                     Sub Main を含むクラスまたはモジュール 
-                                  を指定します。System.Windows.Forms.Form から継承
-                                  されるクラスまたはモジュールにすることもできます。
+                                  を指定します。System.Windows.Forms.Form から継承 
+                                  されるクラスにすることもできます。 
                                   (短い形式: /m)
 /moduleassemblyname:&lt;string&gt;      このモジュールが一部となる 
                                   アセンブリ名です。
 /netcf                            .NET Compact Framework をターゲットにします。
 /nostdlib                         標準ライブラリ 
-                                  (system.dll と VBC.RSP ファイル) を参照しません。
+                                  (system.dll と VBC.RSP ファイル)を参照しません。
 /pathmap:&lt;K1&gt;=&lt;V1&gt;,&lt;K2&gt;=&lt;V2&gt;,...
                                   コンパイラが出力するソース パス名のマッピングを
                                   指定します。
@@ -4470,16 +4499,16 @@
                                   x86、x64、Itanium、arm、
                                   AnyCPU32BitPreferred、anycpu (既定) でなければなりません。
 /preferreduilang                  出力用の言語名を指定します。
-/sdkpath:&lt;path&gt;                   .NET Framework SDK ディレクトリ (mscorlib.dll) 
+/sdkpath:&lt;path&gt;                   .NET Framework SDK ディレクトリ (mscorlib.dll)
                                   の場所。
-/subsystemversion:&lt;version&gt;       出力 PE のサブシステム バージョンを指定します。 
+/subsystemversion:&lt;version&gt;       出力 PE のサブシステム バージョンを指定します。  
                                   version:&lt;number&gt;[.&lt;number&gt;]
 /utf8output[+|-]                  コンパイラ出力を UTF-8 文字エンコード 
                                   で作成します。
 @&lt;file&gt;                           コマンドライン設定をテキスト ファイルから挿入します
 /vbruntime[+|-|*]                 既定の Visual Basic ランタイムを使用して/使用せずに
                                   コンパイルします。
-/vbruntime:&lt;file&gt;                 &lt;file&gt; の別の Visual Basic ランタイムを使用して  
+/vbruntime:&lt;file&gt;                 &lt;file&gt; の別の Visual Basic ランタイムを使用して 
                                   コンパイルします。
 </value>
   </data>
@@ -4493,7 +4522,7 @@
     <value>型パラメーターの制約が異なるため、'{0}' で '{1}' をオーバーライドすることはできません。</value>
   </data>
   <data name="ERR_ExpectedNamedArgument" xml:space="preserve">
-    <value>名前付き引数が必要です。</value>
+    <value>名前付き引数が必要です。末尾以外の名前付き引数を使用するには、言語バージョン {0} 以上を使用してください。</value>
   </data>
   <data name="ERR_CircularEvaluation1" xml:space="preserve">
     <value>定数 '{0}' が、それ自体の値に依存することはできません。</value>
