--- a/src/cli-deps-satellites/src/Microsoft.CodeAnalysis.VisualBasic/VBResources.ko.resx
+++ b/src/cli-deps-satellites/src/Microsoft.CodeAnalysis.VisualBasic/VBResources.ko.resx
@@ -231,6 +231,9 @@
   <data name="ERR_GotoIntoFor" xml:space="preserve">
     <value>'{0}'이(가) 이 문을 포함하지 않는 'For' 또는 'For Each' 문 내부에 있기 때문에 'GoTo {0}'은(는) 유효하지 않습니다.</value>
   </data>
+  <data name="IArgumentIsNotVisualBasicArgument" xml:space="preserve">
+    <value>{0}은(는) 유효한 Visual Basic 인수가 아닙니다.</value>
+  </data>
   <data name="WRN_DefAsgUseNullRefStr_Title" xml:space="preserve">
     <value>변수에 값이 할당되기 전에 변수가 사용됨</value>
   </data>
@@ -447,7 +450,7 @@
     <value>'{0}' 어셈블리 참조가 잘못되어 확인할 수 없습니다.</value>
   </data>
   <data name="ERR_DuplicateAccessCategoryUsed" xml:space="preserve">
-    <value>'Public', 'Private', 'Protected', 'Friend' 또는 'Protected Friend' 중 하나만 지정할 수 있습니다.</value>
+    <value>'Public', 'Private', 'Protected', 'Friend', 'Protected Friend' 또는 'Private Protected' 중 하나만 지정할 수 있습니다.</value>
   </data>
   <data name="WRN_LambdaPassedToRemoveHandler_Title" xml:space="preserve">
     <value>이벤트 처리기에서 람다 식이 제거되지 않음</value>
@@ -717,6 +720,9 @@
   <data name="ERR_PropertyNameConflictInMyCollection" xml:space="preserve">
     <value>'{0}'의 이름이 '{1}' 형식을 'My' 그룹에 노출하는 데 사용한 멤버와 같습니다. 형식 또는 형식의 바깥쪽 네임스페이스의 이름을 바꾸세요.</value>
   </data>
+  <data name="ERR_ExpectedNamedArgumentInAttributeList" xml:space="preserve">
+    <value>명명된 인수가 필요합니다.</value>
+  </data>
   <data name="ERR_NameNotEvent2" xml:space="preserve">
     <value>'{0}'은(는) '{1}'의 이벤트가 아닙니다.</value>
   </data>
@@ -752,6 +758,9 @@
   </data>
   <data name="ERR_VarianceOutParamDisallowed1" xml:space="preserve">
     <value>'{0}'이(가) 'Out' 형식 매개 변수이므로 '{0}' 형식을 이 컨텍스트에서 사용할 수 없습니다.</value>
+  </data>
+  <data name="ERR_InvalidDebugInfo" xml:space="preserve">
+    <value>'{2}' 어셈블리에서 '{0}' 메서드(토큰 0x{1})의 디버그 정보를 읽을 수 없습니다.</value>
   </data>
   <data name="ERR_DefaultMissingFromProperty2" xml:space="preserve">
     <value>'{0}'과(와) '{1}' 중 하나만 'Default'로 선언되었으므로 서로 오버로드할 수 없습니다.</value>
@@ -800,6 +809,9 @@
   </data>
   <data name="ERR_QueryOperatorNotFound" xml:space="preserve">
     <value>이 컨텍스트에서는 '{0}' 메서드의 정의에 액세스할 수 없습니다.</value>
+  </data>
+  <data name="IConversionExpressionIsNotVisualBasicConversion" xml:space="preserve">
+    <value>{0}은(는) 유효한 Visual Basic 변환 식이 아닙니다.</value>
   </data>
   <data name="ERR_InaccessibleMember3" xml:space="preserve">
     <value>'{0}.{1}'은(는) '{2}'이므로 이 컨텍스트에서 액세스할 수 없습니다.</value>
@@ -946,6 +958,9 @@
   </data>
   <data name="WRN_IfTooManyTypesObjectAssumed" xml:space="preserve">
     <value>두 개 이상의 형식이 가능하므로 공용 형식을 유추할 수 없습니다. 'Object'로 간주합니다.</value>
+  </data>
+  <data name="FEATURE_LeadingDigitSeparator" xml:space="preserve">
+    <value>선행 숫자 구분 기호</value>
   </data>
   <data name="ERR_ExpectedStringLiteral" xml:space="preserve">
     <value>문자열 상수가 필요합니다.</value>
@@ -1446,6 +1461,9 @@
   <data name="ERR_RedimNoSizes" xml:space="preserve">
     <value>'ReDim' 문에는 배열의 각 차원에 대한 새 범위 목록이 괄호 안에 있어야 합니다.</value>
   </data>
+  <data name="ERR_BadNonTrailingNamedArgument" xml:space="preserve">
+    <value>명명된 인수 '{0}'은(는) 잘못된 위치에 사용되었지만 뒤에 명명되지 않은 인수가 옵니다.</value>
+  </data>
   <data name="ERR_InvalidAttributeUsageOnAccessor" xml:space="preserve">
     <value>이 선언 형식에서는 '{0}' 특성이 유효하지 않으므로 '{2}'의 '{1}'에 적용할 수 없습니다.</value>
   </data>
@@ -1912,7 +1930,7 @@
     <value>'End Set'은 짝이 되는 'Set' 뒤에 와야 합니다.</value>
   </data>
   <data name="ERR_CannotEmbedWithoutPdb" xml:space="preserve">
-    <value>/embed 스위치는 이식 가능한 PDB를 내보낼 때만 지원됩니다(/debug:portable 또는 /debug:embedded).</value>
+    <value>/embed 스위치는 PDB를 내보낼 때만 지원됩니다.</value>
   </data>
   <data name="WRN_VarianceDeclarationAmbiguous3" xml:space="preserve">
     <value>'{2}'에 있는 'In' 및 'Out' 매개 변수로 인해 '{0}' 인터페이스가 구현된 다른 인터페이스 '{1}'에 대해 모호합니다.</value>
@@ -2221,6 +2239,9 @@
   </data>
   <data name="ERR_InvInsideInterface" xml:space="preserve">
     <value>인터페이스 본문 안에는 문을 사용할 수 없습니다.</value>
+  </data>
+  <data name="ERR_NamedArgumentSpecificationBeforeFixedArgumentInLateboundInvocation" xml:space="preserve">
+    <value>명명된 인수 사양은 런타임에 바인딩된 호출에서 모든 고정 인수를 지정한 다음에 와야 합니다.</value>
   </data>
   <data name="ERR_NamedParamNotFound1" xml:space="preserve">
     <value>'{0}'은(는) 메서드 매개 변수가 아닙니다.</value>
@@ -2533,6 +2554,9 @@
   </data>
   <data name="ERR_ContinueWhileNotWithinWhile" xml:space="preserve">
     <value>'Continue While'은 'While' 문 내부에만 사용할 수 있습니다.</value>
+  </data>
+  <data name="FEATURE_PrivateProtected" xml:space="preserve">
+    <value>Private Protected</value>
   </data>
   <data name="ERR_TooManyArgs2" xml:space="preserve">
     <value>'{1}'에 정의된 확장 메서드 '{0}'의 인수가 너무 많습니다.</value>
@@ -3955,7 +3979,7 @@
     <value>메서드에는 ParamArray 매개 변수와 Optional 매개 변수를 함께 사용할 수 없습니다.</value>
   </data>
   <data name="ERR_StructureCantUseProtected" xml:space="preserve">
-    <value>구조체의 메서드는 'Protected' 또는 'Protected Friend'로 선언할 수 없습니다.</value>
+    <value>구조체의 메서드는 'Protected', 'Protected Friend' 또는 'Private Protected'로 선언할 수 없습니다.</value>
   </data>
   <data name="WRN_QueryMissingAsClauseinVarDecl" xml:space="preserve">
     <value>형식을 유추할 수 없어 범위 변수가 Object 형식으로 간주됩니다. 'As' 절을 사용하여 다른 형식을 지정하세요.</value>
@@ -3965,6 +3989,9 @@
   </data>
   <data name="ERR_PartialTypeBadMustInherit1" xml:space="preserve">
     <value>'MustInherit'은 다른 부분 형식(Partial Type) 중 하나에 지정된 'NotInheritable'과 함께 사용할 수 없으므로 '{0}' 부분 형식에 지정할 수 없습니다.</value>
+  </data>
+  <data name="IDS_LangVersions" xml:space="preserve">
+    <value>지원되는 언어 버전:</value>
   </data>
   <data name="ERR_RemoveParamWrongForWinRT" xml:space="preserve">
     <value>Windows 런타임 이벤트에서 'RemoveHandler' 메서드 매개 변수의 형식은 'EventRegistrationToken'이어야 합니다.</value>
@@ -4380,12 +4407,12 @@
 /debug[+|-]                       디버깅 정보를 내보냅니다.
 /debug:full                       전체 디버깅 정보를 내보냅니다(기본값).
 /debug:pdbonly                    전체 디버깅 정보를 내보냅니다.
-/debug:portable                   크로스 플랫폼 디버깅 정보를 내보냅니다.
-/debug:embedded                   크로스 플랫폼 디버깅 정보를 대상 .dll 또는 .exe로 
+/debug:portable                   플랫폼 간 디버깅 정보를 내보냅니다.
+/debug:embedded                   플랫폼 간 디버깅 정보를 대상 .dll 또는 .exe로 
                                   내보냅니다.
-/deterministic                    결정적 어셈블리를 생성합니다.
-                                  (모듈 버전 GUID 및 타임스탬프 포함)
-/refonly                          주 출력 대신 참조 어셈블리 생성
+/deterministic                    결정적 어셈블리를 생성합니다
+                                  (모듈 버전 GUID 및 타임스탬프 포함).
+/refonly                          주 출력 대신 참조 어셈블리를 생성합니다.
 /instrument:TestCoverage          검사 정보를 수집하기 위해 계측한
                                   어셈블리를 생성합니다.
 /sourcelink:&lt;file&gt;                PDB에 포함할 소스 링크 정보입니다.
@@ -4409,9 +4436,11 @@
 /imports:&lt;import_list&gt;            참조된 메타데이터 파일에 네임스페이스의 
                                   전역 가져오기를 선언합니다. 
                                   import_list:namespace,...
-/langversion:&lt;number&gt;             언어 버전 
-                                  9|9.0|10|10.0|11|11.0|12|12.0|14|14.0|15|
-                                  15.0|15.3|default|latest를 지정합니다.
+/langversion:?                    언어 버전에 허용되는 값을 표시합니다.
+/langversion:&lt;string&gt;             언어 버전을
+                                  `default`(최신 주 버전),
+                                  `latest`(최신 버전, 부 버전 포함),
+                                  `14` 또는 `15.3` 같은 특정 버전으로 지정합니다.
 /optionexplicit[+|-]              변수의 명시적 선언을 요구합니다.
 /optioninfer[+|-]                 변수의 형식 유추를 허용합니다.
 /rootnamespace:&lt;string&gt;           모든 형식 선언의 루트 네임스페이스를 
@@ -4493,7 +4522,7 @@
     <value>형식 매개 변수 제약 조건이 서로 다르므로 '{0}'은(는) '{1}'을(를) 재정의할 수 없습니다.</value>
   </data>
   <data name="ERR_ExpectedNamedArgument" xml:space="preserve">
-    <value>명명된 인수가 필요합니다.</value>
+    <value>명명된 인수가 필요합니다. 뒤에 오지 않는 명명된 인수를 사용하려면 {0} 이상의 언어 버전을 사용하세요.</value>
   </data>
   <data name="ERR_CircularEvaluation1" xml:space="preserve">
     <value>'{0}' 상수는 자신의 값에 종속될 수 없습니다.</value>
