--- a/src/cli-deps-satellites/src/Microsoft.CodeAnalysis.VisualBasic/VBResources.pl.resx
+++ b/src/cli-deps-satellites/src/Microsoft.CodeAnalysis.VisualBasic/VBResources.pl.resx
@@ -231,6 +231,9 @@
   <data name="ERR_GotoIntoFor" xml:space="preserve">
     <value>Instrukcja „GoTo {0}” jest nieprawidłowa, ponieważ element „{0}” znajduje się wewnątrz instrukcji „For” lub „For Each”, która nie zawiera tej instrukcji.</value>
   </data>
+  <data name="IArgumentIsNotVisualBasicArgument" xml:space="preserve">
+    <value>{0} nie jest prawidłowym argumentem języka Visual Basic</value>
+  </data>
   <data name="WRN_DefAsgUseNullRefStr_Title" xml:space="preserve">
     <value>Zmienna została użyta przed przypisaniem do niej wartości</value>
   </data>
@@ -447,7 +450,7 @@
     <value>Odwołanie do zestawu „{0}” jest nieprawidłowe i nie można go rozpoznać.</value>
   </data>
   <data name="ERR_DuplicateAccessCategoryUsed" xml:space="preserve">
-    <value>Można określić tylko jeden z modyfikatorów: Public, Private, Protected, Friend lub Protected Friend.</value>
+    <value>Można określić tylko jeden z modyfikatorów: Public, Private, Protected, Friend, Protected Friend i Private Protected.</value>
   </data>
   <data name="WRN_LambdaPassedToRemoveHandler_Title" xml:space="preserve">
     <value>Wyrażenie lambda nie zostanie usunięte z tej procedury obsługi zdarzeń</value>
@@ -717,6 +720,9 @@
   <data name="ERR_PropertyNameConflictInMyCollection" xml:space="preserve">
     <value>Element „{0}” ma taką samą nazwę jak element członkowski użyty dla typu „{1}” ujawniony w grupie „My”. Zmień nazwę typu lub obejmującej go przestrzeni nazw.</value>
   </data>
+  <data name="ERR_ExpectedNamedArgumentInAttributeList" xml:space="preserve">
+    <value>Oczekiwano nazwanego argumentu.</value>
+  </data>
   <data name="ERR_NameNotEvent2" xml:space="preserve">
     <value>Element „{0}” nie jest zdarzeniem elementu „{1}”.</value>
   </data>
@@ -752,6 +758,9 @@
   </data>
   <data name="ERR_VarianceOutParamDisallowed1" xml:space="preserve">
     <value>Typ „{0}” nie może zostać użyty w tym kontekście, ponieważ „{0}” jest parametrem typu „Out”.</value>
+  </data>
+  <data name="ERR_InvalidDebugInfo" xml:space="preserve">
+    <value>Nie można odczytać informacji debugowania metody „{0}” (token 0x{1}) z zestawu „{2}”</value>
   </data>
   <data name="ERR_DefaultMissingFromProperty2" xml:space="preserve">
     <value>Elementy „{0}” i „{1}” nie mogą przeciążać siebie nawzajem, ponieważ tylko jeden z nich jest zadeklarowany jako „Default”.</value>
@@ -800,6 +809,9 @@
   </data>
   <data name="ERR_QueryOperatorNotFound" xml:space="preserve">
     <value>Definicja metody „{0}” jest niedostępna w tym kontekście.</value>
+  </data>
+  <data name="IConversionExpressionIsNotVisualBasicConversion" xml:space="preserve">
+    <value>{0} nie jest prawidłowym wyrażeniem konwersji języka Visual Basic</value>
   </data>
   <data name="ERR_InaccessibleMember3" xml:space="preserve">
     <value>Element „{0}.{1}” nie jest dostępny w tym kontekście, ponieważ jest to element „{2}”.</value>
@@ -946,6 +958,9 @@
   </data>
   <data name="WRN_IfTooManyTypesObjectAssumed" xml:space="preserve">
     <value>Nie można wywnioskować wspólnego typu, ponieważ jest możliwy więcej niż jeden typ; przyjęto „Object”.</value>
+  </data>
+  <data name="FEATURE_LeadingDigitSeparator" xml:space="preserve">
+    <value>wiodący separator cyfr</value>
   </data>
   <data name="ERR_ExpectedStringLiteral" xml:space="preserve">
     <value>Oczekiwano stałej w postaci ciągu.</value>
@@ -1446,6 +1461,9 @@
   <data name="ERR_RedimNoSizes" xml:space="preserve">
     <value>Instrukcja ReDim wymaga ujętej w nawiasy listy nowych granic dla każdego wymiaru tablicy.</value>
   </data>
+  <data name="ERR_BadNonTrailingNamedArgument" xml:space="preserve">
+    <value>Nazwany argument „{0}” jest używany poza pozycją, ale następuje po nim nienazwany argument</value>
+  </data>
   <data name="ERR_InvalidAttributeUsageOnAccessor" xml:space="preserve">
     <value>Nie można zastosować atrybutu „{0}” do elementu „{1}” w „{2}”, ponieważ atrybut nie jest prawidłowy w tym typie deklaracji.</value>
   </data>
@@ -1912,7 +1930,7 @@
     <value>Instrukcja End Set musi być poprzedzona odpowiadającą jej instrukcją Set.</value>
   </data>
   <data name="ERR_CannotEmbedWithoutPdb" xml:space="preserve">
-    <value>Przełącznik /embed jest obsługiwany tylko w przypadku emitowania przenośnego pliku PDB (/debug:portable lub /debug:embedded).</value>
+    <value>Przełącznik /embed jest obsługiwany tylko w przypadku emitowania pliku PDB.</value>
   </data>
   <data name="WRN_VarianceDeclarationAmbiguous3" xml:space="preserve">
     <value>Interfejs „{0}” jest niejednoznaczny z innym zaimplementowanym interfejsem „{1}” ze względu na parametry „In” i „Out” w „{2}”.</value>
@@ -2221,6 +2239,9 @@
   </data>
   <data name="ERR_InvInsideInterface" xml:space="preserve">
     <value>Instrukcja nie może wystąpić w treści interfejsu.</value>
+  </data>
+  <data name="ERR_NamedArgumentSpecificationBeforeFixedArgumentInLateboundInvocation" xml:space="preserve">
+    <value>Specyfikacje argumentu nazwanego muszą występować po wszystkich stałych argumentach, które zostały określone w wywołaniu późnego wiązania.</value>
   </data>
   <data name="ERR_NamedParamNotFound1" xml:space="preserve">
     <value>Element „{0}” nie jest parametrem metody.</value>
@@ -2533,6 +2554,9 @@
   </data>
   <data name="ERR_ContinueWhileNotWithinWhile" xml:space="preserve">
     <value>Element Continue While może się znajdować tylko w instrukcji While.</value>
+  </data>
+  <data name="FEATURE_PrivateProtected" xml:space="preserve">
+    <value>Prywatny chroniony</value>
   </data>
   <data name="ERR_TooManyArgs2" xml:space="preserve">
     <value>Za dużo argumentów dla metody rozszerzenia „{0}” zdefiniowanej w elemencie „{1}”.</value>
@@ -3955,7 +3979,7 @@
     <value>Metoda nie może mieć zarówno parametru ParamArray, jak i Optional.</value>
   </data>
   <data name="ERR_StructureCantUseProtected" xml:space="preserve">
-    <value>Nie można zadeklarować metody w strukturze jako Protected lub Protected Friend.</value>
+    <value>Nie można zadeklarować metody w strukturze jako Protected, Protected Friend lub Private Protected.</value>
   </data>
   <data name="WRN_QueryMissingAsClauseinVarDecl" xml:space="preserve">
     <value>Przyjęto, że zmienna zakresu będzie typu Object, ponieważ nie można wywnioskować jej typu. Użyj klauzuli „As”, aby określić inny typ.</value>
@@ -3965,6 +3989,9 @@
   </data>
   <data name="ERR_PartialTypeBadMustInherit1" xml:space="preserve">
     <value>Elementu „MustInherit” nie można określić dla typu częściowego „{0}”, ponieważ nie można go łączyć z elementem „NotInheritable” określonym dla jednego z jego innych typów częściowych.</value>
+  </data>
+  <data name="IDS_LangVersions" xml:space="preserve">
+    <value>Obsługiwane wersje językowe:</value>
   </data>
   <data name="ERR_RemoveParamWrongForWinRT" xml:space="preserve">
     <value>W zdarzeniu środowiska wykonawczego systemu Windows parametr metody „RemoveHandler” musi mieć wartość „EventRegistrationToken”</value>
@@ -4339,7 +4366,8 @@
                                   kontenerze aplikacji.
 /target:winmdobj                  Utwórz plik pośredni metadanych systemu Windows
 /doc[+|-]                         Generuje plik dokumentacji XML.
-/doc:&lt;plik&gt;                       Generuje plik dokumentacji XML w pliku &lt;plik&gt;./refout:&lt;file&gt;                    Dane wyjściowe zestawu odwołania do wygenerowania
+/doc:&lt;plik&gt;                       Generuje plik dokumentacji XML w pliku &lt;plik&gt;.
+/refout:&lt;plik&gt;                    Dane wyjściowe zestawu odwołania do wygenerowania
 
                                   - PLIKI WEJŚCIOWE -
 /addmodule:&lt;lista_plików&gt;         Odwołuj się do metadanych z określonych modułów
@@ -4407,10 +4435,12 @@
                                   (krótka wersja: /d)
 /imports:&lt;lista_importów&gt;         Zadeklaruj globalne importy dla przestrzeni nazw w 
                                   przywoływanych plikach metadanych. 
-                                  import_list:przestrzeń_nazw,...
-/langversion:&lt;numer&gt;              Określ wersję języka: 
-                                  9|9.0|10|10.0|11|11.0|12|12.0|14|14.0|15|
-                                  15.0|15.3|default|latest
+                                  import_list:przestrzeń_nazw, ,...
+/langversion:?                    Wyświetl dozwolone wartości dla wersji języka
+/langversion:&lt;ciąg&gt;              Określ wersję języka, taką jak
+                                  „domyślna” (najnowsza wersja główna), lub
+                                  „najnowsza” (najnowsza wersja, z uwzględnieniem wersji pomocniczych)
+                                  lub konkretna wersja, na przykład „14” lub „15.3”
 /optionexplicit[+|-]              Wymagaj jawnej deklaracji zmiennych.
 /optioninfer[+|-]                 Zezwalaj na wnioskowanie o typie zmiennych.
 /rootnamespace:&lt;ciąg&gt;             Określa główną przestrzeń nazw dla wszystkich 
@@ -4440,6 +4470,8 @@
 /codepage:&lt;numer&gt;                 Określa stronę kodową do użycia podczas otwierania 
                                   plików źródłowych.
 /delaysign[+|-]                   Podpisz z opóźnieniem zestaw, używając tylko części publicznej
+                                  klucza o silnej nazwie. 
+/publicsign[+|-]                  Podpisz publicznie zestaw, używając tylko części publicznej
                                   klucza o silnej nazwie.
 /errorreport:&lt;ciąg&gt;               Określa, w jaki sposób obsługiwać wewnętrzne
                                   błędy kompilatora: musi mieć wartość prompt, send, none lub queue
@@ -4460,7 +4492,6 @@
 /netcf                            Ustaw program .NET Compact Framework jako element docelowy.
 /nostdlib                         Nie odwołuj się do bibliotek standardowych 
                                   (plików system.dll i VBC.RSP).
-
 /pathmap:&lt;K1&gt;=&lt;W1&gt;,&lt;K2&gt;=&lt;W2&gt;,...
                                   Określ mapowanie nazw ścieżek źródłowych wyprowadzanych
                                   przez kompilator.
@@ -4491,7 +4522,7 @@
     <value>Element „{0}” nie może przesłonić elementu „{1}”, ponieważ elementy różnią się ograniczeniami parametrów typu.</value>
   </data>
   <data name="ERR_ExpectedNamedArgument" xml:space="preserve">
-    <value>Oczekiwano nazwanego argumentu.</value>
+    <value>Oczekiwano argumentu nazwanego. Użyj wersji języka {0} lub nowszej, aby używać argumentów nazwanych innych niż końcowe.</value>
   </data>
   <data name="ERR_CircularEvaluation1" xml:space="preserve">
     <value>Stała „{0}” nie może zależeć od własnej wartości.</value>
