--- a/src/cli-deps-satellites/src/Microsoft.CodeAnalysis.VisualBasic/VBResources.zh-Hant.resx
+++ b/src/cli-deps-satellites/src/Microsoft.CodeAnalysis.VisualBasic/VBResources.zh-Hant.resx
@@ -231,6 +231,9 @@
   <data name="ERR_GotoIntoFor" xml:space="preserve">
     <value>'GoTo {0}' 無效，因為 '{0}' 位於不包含此陳述式的 'For' 或 'For Each' 陳述式中。</value>
   </data>
+  <data name="IArgumentIsNotVisualBasicArgument" xml:space="preserve">
+    <value>{0} 不是有效的 Visual Basic 引數</value>
+  </data>
   <data name="WRN_DefAsgUseNullRefStr_Title" xml:space="preserve">
     <value>變數在獲派值之前就已使用</value>
   </data>
@@ -447,7 +450,7 @@
     <value>組件參考 '{0}' 無效，無法解析。</value>
   </data>
   <data name="ERR_DuplicateAccessCategoryUsed" xml:space="preserve">
-    <value>只可以指定 'Public'、'Private'、'Protected'、'Friend' 或 'Protected Friend' 其中之一。</value>
+    <value>只可指定 'Public'、'Private'、'Protected'、'Friend'、'Protected Friend' 或 'Private Protected' 其中之一。</value>
   </data>
   <data name="WRN_LambdaPassedToRemoveHandler_Title" xml:space="preserve">
     <value>將不會從這個事件處理常式中移除 Lambda 運算式</value>
@@ -717,6 +720,9 @@
   <data name="ERR_PropertyNameConflictInMyCollection" xml:space="preserve">
     <value>'{0}' 與用在 'My' 群組中所公開之類型 '{1}' 的成員，有相同的名稱。請重新命名類型或其內含的命名空間。</value>
   </data>
+  <data name="ERR_ExpectedNamedArgumentInAttributeList" xml:space="preserve">
+    <value>必須是具名引數。</value>
+  </data>
   <data name="ERR_NameNotEvent2" xml:space="preserve">
     <value>'{0}' 不是 '{1}' 的事件。</value>
   </data>
@@ -752,6 +758,9 @@
   </data>
   <data name="ERR_VarianceOutParamDisallowed1" xml:space="preserve">
     <value>類型 '{0}' 無法用於此內容中，因為 '{0}' 是 'Out' 類型參數。</value>
+  </data>
+  <data name="ERR_InvalidDebugInfo" xml:space="preserve">
+    <value>無法從組件 '{2}' 讀取方法 '{0}' 的偵錯資訊 (權杖 0x{1})</value>
   </data>
   <data name="ERR_DefaultMissingFromProperty2" xml:space="preserve">
     <value>'{0}' 和 '{1}' 無法互相多載，因為只有一個宣告為 'Default'。</value>
@@ -800,6 +809,9 @@
   </data>
   <data name="ERR_QueryOperatorNotFound" xml:space="preserve">
     <value>在此內容中無法存取方法 '{0}' 的定義。</value>
+  </data>
+  <data name="IConversionExpressionIsNotVisualBasicConversion" xml:space="preserve">
+    <value>{0} 不是有效的 Visual Basic 轉換運算式</value>
   </data>
   <data name="ERR_InaccessibleMember3" xml:space="preserve">
     <value>無法在此內容中存取 '{0}.{1}'，因為其為 '{2}'。</value>
@@ -946,6 +958,9 @@
   </data>
   <data name="WRN_IfTooManyTypesObjectAssumed" xml:space="preserve">
     <value>無法推斷一般類型，因為可能的類型不止一種; 假設是 'Object'。</value>
+  </data>
+  <data name="FEATURE_LeadingDigitSeparator" xml:space="preserve">
+    <value>前置數字分隔符號</value>
   </data>
   <data name="ERR_ExpectedStringLiteral" xml:space="preserve">
     <value>必須有字串常數。</value>
@@ -1446,6 +1461,9 @@
   <data name="ERR_RedimNoSizes" xml:space="preserve">
     <value>ReDim' 陳述式需要每個陣列維度新界限的括號清單。</value>
   </data>
+  <data name="ERR_BadNonTrailingNamedArgument" xml:space="preserve">
+    <value>具名引數 '{0}' 未用在正確的位置，但後面接著未命名引數</value>
+  </data>
   <data name="ERR_InvalidAttributeUsageOnAccessor" xml:space="preserve">
     <value>無法將屬性 '{0}' 套用至 '{2}' 的 '{1}'，因為該屬性在此宣告類型上無效。</value>
   </data>
@@ -1912,7 +1930,7 @@
     <value>End Set' 之前必須搭配相對應的 'Set'。</value>
   </data>
   <data name="ERR_CannotEmbedWithoutPdb" xml:space="preserve">
-    <value>發出可攜式 PDB 時才支援 /embed 參數 (/debug:portable 或 /debug:embedded)。</value>
+    <value>只有在發出 PDB 時才支援 /embed 參數。</value>
   </data>
   <data name="WRN_VarianceDeclarationAmbiguous3" xml:space="preserve">
     <value>因為 '{2}' 中 'In' 和 'Out' 參數而造成介面 '{0}' 與另一個實作介面 '{1}' 之間模稜兩可。</value>
@@ -2221,6 +2239,9 @@
   </data>
   <data name="ERR_InvInsideInterface" xml:space="preserve">
     <value>陳述式不能出現在介面主體內。</value>
+  </data>
+  <data name="ERR_NamedArgumentSpecificationBeforeFixedArgumentInLateboundInvocation" xml:space="preserve">
+    <value>必須在所有固定引數皆已在晚期繫結引動過程中指定之後，具名引數規格才可出現。</value>
   </data>
   <data name="ERR_NamedParamNotFound1" xml:space="preserve">
     <value>'{0}' 不是方法參數。</value>
@@ -2533,6 +2554,9 @@
   </data>
   <data name="ERR_ContinueWhileNotWithinWhile" xml:space="preserve">
     <value>Continue While' 只可以在 'While' 陳述式中出現。</value>
+  </data>
+  <data name="FEATURE_PrivateProtected" xml:space="preserve">
+    <value>Private Protected</value>
   </data>
   <data name="ERR_TooManyArgs2" xml:space="preserve">
     <value>在 '{1}' 中定義的擴充方法 '{0}'，有太多引數。</value>
@@ -3955,7 +3979,7 @@
     <value>方法不可以同時有 ParamArray 和 Optional 引數。</value>
   </data>
   <data name="ERR_StructureCantUseProtected" xml:space="preserve">
-    <value>結構中的方法不可宣告為 'Protected' 或 'Protected Friend'。</value>
+    <value>在結構中的方法不可宣告為 'Protected'、'Protected Friend' 或 'Private Protected'。</value>
   </data>
   <data name="WRN_QueryMissingAsClauseinVarDecl" xml:space="preserve">
     <value>因為無法推斷範圍變數的類型，所以會將其假設為 Object 類型。請使用 'As' 子句指定不同的類型。</value>
@@ -3965,6 +3989,9 @@
   </data>
   <data name="ERR_PartialTypeBadMustInherit1" xml:space="preserve">
     <value>不可為部分類型 '{0}' 指定 'MustInherit'，因為其無法與針對某個其他部分類型所指定的 'NotInheritable' 相結合。</value>
+  </data>
+  <data name="IDS_LangVersions" xml:space="preserve">
+    <value>支援的語言版本:</value>
   </data>
   <data name="ERR_RemoveParamWrongForWinRT" xml:space="preserve">
     <value>在 Windows 執行階段事件中，'RemoveHandler' 方法參數的類型必須是 'EventRegistrationToken'</value>
@@ -4329,27 +4356,27 @@
 
                                   - 輸出檔案 -
 /out:&lt;檔案&gt;                       指定輸出檔案名稱。
-/target:exe                       建立主控台應用程式 (預設)。
+/target:exe                       建立主控台應用程式 (預設)。 
                                   (簡短形式: /t)
 /target:winexe                    建立 Windows 應用程式。
 /target:library                   建立程式庫組件。
-/target:module                    建立可加入組件的
+/target:module                    建立可新增至組件的
                                   模組。
 /target:appcontainerexe           建立可在 AppContainer 中執行的
                                   Windows 應用程式。
 /target:winmdobj                  建立 Windows 中繼資料中繼檔案
 /doc[+|-]                         產生 XML 文件檔案。
 /doc:&lt;檔案&gt;                       將產生的 XML 文件檔案儲存至 &lt;檔案&gt;。
-/refout:&lt;檔案&gt;                    要產生的參考組件輸出。
+/refout:&lt;檔案&gt;                    要產生的參考組件輸出
 
                                   - 輸入檔案 -
 /addmodule:&lt;檔案清單&gt;            從指定的模組參考中繼資料
-/link:&lt;檔案清單&gt;                 從指定的 Interop 組件內嵌
+/link:&lt;檔案清單&gt;                 從指定的 Interop 組件內嵌 
                                   中繼資料。(簡短形式: /l)
-/recurse:&lt;萬用字元&gt;               依據指定的萬用字元，
+/recurse:&lt;萬用字元&gt;               依據萬用字元規格， 
                                   併入目前的目錄及
                                   子目錄中的所有檔案。
-/reference:&lt;檔案清單&gt;            從指定的組件參考
+/reference:&lt;檔案清單&gt;            從指定的組件參考 
                                   中繼資料。(簡短形式: /r)
 /analyzer:&lt;檔案清單&gt;             從此組件執行分析器
                                   (簡短形式: /a)
@@ -4358,19 +4385,19 @@
                                   其他檔案。
 
                                   - 資源 -
-/linkresource:&lt;resinfo&gt;           連結指定的檔案作為外部
+/linkresource:&lt;資源資訊&gt;           連結指定的檔案作為外部
                                   組件資源。
-                                  resinfo:&lt;檔案&gt;[,&lt;名稱&gt;[,公開|私用]] 
+                                  resinfo:&lt;檔案&gt;[,&lt;名稱&gt;[,public|private]] 
                                   (簡短形式: /linkres)
 /nowin32manifest                  預設資訊清單不應內嵌在輸出 PE 的
                                   資訊清單區段中。
-/resource:&lt;resinfo&gt;               加入指定的檔案作為內嵌的
+/resource:&lt;資源資訊&gt;               新增指定的檔案作為內嵌的
                                   組件資源。
-                                  resinfo:&lt;檔案&gt;[,&lt;名稱&gt;[,公開|私用]] 
+                                  resinfo:&lt;檔案&gt;[,&lt;名稱&gt;[,public|private]] 
                                   (簡短形式: /res)
 /win32icon:&lt;檔案&gt;                 為預設的 Win32 資源，
                                   指定 Win32 圖示檔 (.ico)。
-/win32manifest:&lt;檔案&gt;             所提供的檔案，會內嵌在輸出 PE 的
+/win32manifest:&lt;檔案&gt;             提供的檔案會內嵌在輸出 PE 的
                                   資訊清單區段中。
 /win32resource:&lt;檔案&gt;             指定 Win32 資源檔 (.res)。
 
@@ -4381,20 +4408,20 @@
 /debug:full                       發出完整偵錯資訊 (預設)。
 /debug:pdbonly                    發出完整偵錯資訊。
 /debug:portable                   發出跨平台偵錯資訊。
-/debug:embedded                   將跨平台偵錯資訊發出到
-                                 目標 .dll 或 .exe 中。
+/debug:embedded                   將跨平台偵錯資訊發到
+                                  目標 .dll 或 .exe 中。
 /deterministic                    產生確定性組件
                                   (包括模組版本 GUID 與時間戳記)
-/refonly                          產生參考組件取代主要輸出
+/refonly                          產生參考組件以代替主要輸出
 /instrument:TestCoverage          產生檢測組件，以收集
                                   涵蓋範圍資訊
-/sourcelink:&lt;檔案&gt;                要內嵌 PDB 中的來源連結資訊。
+/sourcelink:&lt;檔案&gt;                要內嵌至 PDB 中的來源連結資訊。
 
                                   - 錯誤與警告 -
 /nowarn                           停用所有警告。
-/nowarn:&lt;號碼清單&gt;             停用個別警告的清單。
+/nowarn:&lt;編號清單&gt;             停用個別警告的清單。
 /warnaserror[+|-]                 將所有警告視為錯誤。
-/warnaserror[+|-]:&lt;號碼清單&gt;   將警告清單視為錯誤。
+/warnaserror[+|-]:&lt;編號清單&gt;   將警告清單視為錯誤。
 /ruleset:&lt;檔案&gt;                   指定會停用特定診斷的規則集
                                   檔案。
 /errorlog:&lt;檔案&gt;                  指定要記錄所有編譯器和分析器診斷的
@@ -4404,66 +4431,68 @@
 
                                   - 語言 -
 /define:&lt;符號清單&gt;             宣告全域條件式編譯
-                                  符號。symbol_list:name=value,... 
+                                  符號。 symbol_list:name=value,... 
                                   (簡短形式: /d)
-/imports:&lt;import_list&gt;            在參考的中繼資料檔中，宣告命名空間的
-                                  全域匯入。
+/imports:&lt;匯入清單&gt;            在參考的中繼資料檔中宣告命名空間的
+                                  全域匯入。 
                                   import_list:namespace,...
-/langversion:&lt;號碼&gt;             指定語言版本: 
-                                  9|9.0|10|10.0|11|11.0|12|12.0|14|14.0|15|
-                                  15.0|15.3|default|latest。
+/langversion:?                    顯示語言版本允許的值
+/langversion:&lt;字串&gt;             指定語言版本，例如 
+                                  `default` (最新的主要版本)、
+                                  `latest` (最新版本，包含次要版本) 
+                                  或特定版本，例如 `14` 或 `15.3`
 /optionexplicit[+|-]              必須明確宣告變數。
-/optioninfer[+|-]                 允許變數的類型推斷。
-/rootnamespace:&lt;字串&gt;           指定所有類型宣告的
+/optioninfer[+|-]                 允許變數的型別推斷。
+/rootnamespace:&lt;字串&gt;           指定所有型別宣告的
                                   根命名空間。
-/optionstrict[+|-]                強制採用嚴格的語意。
-/optionstrict:custom              未遵守嚴格的語意時
+/optionstrict[+|-]                強制採用嚴格語意。
+/optionstrict:custom              在未遵守嚴格的語意時
                                   發出警告。
 /optioncompare:binary             指定二進位樣式字串比較。
                                   此為預設。
 /optioncompare:text               指定文字樣式字串比較。
 
                                   - 其他 -
-/help                             顯示此使用訊息。(簡短形式: /?)
+/help                             顯示此使用訊息。 (簡短形式: /?)
 /noconfig                         不要自動包含 VBC.RSP 檔。
 /nologo                           不顯示編譯器著作權橫幅。
-/quiet                            無訊息輸出模式。
-/verbose                          顯示詳細訊息。
-/parallel[+|-]                    並行建置。
+/quiet                            無對話輸出模式。
+/verbose                          顯示詳細資訊訊息。
+/parallel[+|-]                    並行建置。 
 /version                          顯示編譯器的版本號碼並結束。
 
                                   - 進階 -
-/baseaddress:&lt;數字&gt;             程式庫或模組的基底位址
+/baseaddress:&lt;號碼&gt;             程式庫或模組的基底位址 
                                   (十六進位)。
-/checksumalgorithm:&lt;alg&gt;          為計算儲存在 PDB 中的來源檔案總和檢查碼
+/checksumalgorithm:&lt;演算法&gt;          為計算儲存在 PDB 中的來源檔案總和檢查碼
                                   指定演算法。支援的值為:
                                   SHA1 (預設) 或 SHA256。
-/codepage:&lt;號碼&gt;                指定開啟來源檔案時要使用的
+/codepage:&lt;編號&gt;                指定開啟來源檔案時要使用的
                                   字碼頁。
-/delaysign[+|-]                   只使用強式名稱金鑰的公開部分，
+/delaysign[+|-]                   只使用強式名稱金鑰的公開部分
                                   延遲簽署組件。
-/publicsign[+|-]                  只使用強式名稱金鑰的公開
-                                  部分公開簽署組件。
+/publicsign[+|-]                  只使用強式名稱金鑰的公開部分
+                                  公開簽署組件。
 /errorreport:&lt;字串&gt;             指定如何處理內部編譯器
                                   錯誤; 必須是 prompt、send、none 或 queue
                                   (預設)。
-/filealign:&lt;號碼&gt;               指定用於輸出檔區段的
+/filealign:&lt;數字&gt;               指定用於輸出檔區段的
                                   對齊。
-/highentropyva[+|-]               啟用高度 Entropy ASLR。
+/highentropyva[+|-]               啟用高熵 ASLR。
 /keycontainer:&lt;字串&gt;            指定強式名稱金鑰容器。
-/keyfile:&lt;檔案&gt;                   指定強式名稱金鑰檔。
+/keyfile:&lt;檔案&gt;                   指定強勢名稱金鑰檔案。
 /libpath:&lt;路徑清單&gt;              要在其中搜尋中繼資料參考的目錄清單
                                   (以分號分隔)。
 /main:&lt;類別&gt;                     指定包含 Sub Main 的類別或模組。
                                   也可以是繼承自
                                   System.Windows.Forms.Form 的類別。
                                   (簡短形式: /m)
-/moduleassemblyname:&lt;字串&gt;      要將此模組包含為一部分的
+/moduleassemblyname:&lt;字串&gt;      此模組要加入其中的
                                   組件名稱。
 /netcf                            以 .NET Compact Framework 為目標。
 /nostdlib                         不要參考標準程式庫
-                                  (system.dll 和 VBC.RSP 檔案)。
-/pathmap:&lt;K1&gt;=&lt;V1&gt;、&lt;K2&gt;=&lt;V2&gt;、...
+                                  (system.dll 和 VBC.RSP 檔)。
+/pathmap:&lt;K1&gt;=&lt;V1&gt;,&lt;K2&gt;=&lt;V2&gt;,...
                                   為編譯器輸出的來源路徑名稱
                                   指定對應。
 /platform:&lt;字串&gt;                限制這個程式碼可以在哪些平台執行; 
@@ -4493,7 +4522,7 @@
     <value>'{0}' 無法覆寫 '{1}'，因為其類型參數條件約束不同。</value>
   </data>
   <data name="ERR_ExpectedNamedArgument" xml:space="preserve">
-    <value>必須有具名引數。</value>
+    <value>必須是具名引數。請使用語言版本 {0} 或更高版本，以使用非後置的具名引數。</value>
   </data>
   <data name="ERR_CircularEvaluation1" xml:space="preserve">
     <value>常數 '{0}' 無法相依其本身的值。</value>
