--- a/src/cli-deps-satellites/src/Microsoft.CodeAnalysis/Microsoft.CodeAnalysis.CodeAnalysisResources.fr.resx
+++ b/src/cli-deps-satellites/src/Microsoft.CodeAnalysis/Microsoft.CodeAnalysis.CodeAnalysisResources.fr.resx
@@ -178,6 +178,9 @@
   <data name="Class1" xml:space="preserve">
     <value>classe</value>
   </data>
+  <data name="EmbeddedTextsRequirePdb" xml:space="preserve">
+    <value>Les textes incorporés sont uniquement pris en charge durant l'émission d'un fichier PDB.</value>
+  </data>
   <data name="ModuleCopyCannotBeUsedToCreateAssemblyMetadata" xml:space="preserve">
     <value>Impossible d'utiliser le module de copie pour créer des métadonnées d'assembly.</value>
   </data>
@@ -231,9 +234,6 @@
   </data>
   <data name="KeepAliveIsTooSmall" xml:space="preserve">
     <value>Les arguments de l'option '/keepalive' dont la valeur est inférieure à -1 ne sont pas valides.</value>
-  </data>
-  <data name="IOperationFeatureDisabled" xml:space="preserve">
-    <value>La fonctionnalité 'IOperation' est désactivée.</value>
   </data>
   <data name="AbsolutePathExpected" xml:space="preserve">
     <value>Chemin d'accès absolu attendu.</value>
@@ -497,9 +497,6 @@
   </data>
   <data name="TupleElementNameEmpty" xml:space="preserve">
     <value>Le nom d'élément tuple ne peut pas être une chaîne vide.</value>
-  </data>
-  <data name="EmbeddedTextsRequirePortablePdb" xml:space="preserve">
-    <value>Les textes incorporés sont uniquement pris en charge durant l'émission d'un fichier PDB portable.</value>
   </data>
   <data name="InvalidOutputKindForSubmission" xml:space="preserve">
     <value>Type de sortie non valide pour la soumission. DynamicallyLinkedLibrary attendu.</value>
