--- a/src/cli-deps-satellites/src/Microsoft.CodeAnalysis/Microsoft.CodeAnalysis.CodeAnalysisResources.it.resx
+++ b/src/cli-deps-satellites/src/Microsoft.CodeAnalysis/Microsoft.CodeAnalysis.CodeAnalysisResources.it.resx
@@ -178,6 +178,9 @@
   <data name="Class1" xml:space="preserve">
     <value>classe</value>
   </data>
+  <data name="EmbeddedTextsRequirePdb" xml:space="preserve">
+    <value>I testi incorporati sono supportati solo quando si crea un file PDB.</value>
+  </data>
   <data name="ModuleCopyCannotBeUsedToCreateAssemblyMetadata" xml:space="preserve">
     <value>Non è possibile usare la copia del modulo per creare i metadati di un assembly.</value>
   </data>
@@ -231,9 +234,6 @@
   </data>
   <data name="KeepAliveIsTooSmall" xml:space="preserve">
     <value>Gli argomenti dell'opzione '/keepalive' il cui valore è inferiore a -1 non sono validi.</value>
-  </data>
-  <data name="IOperationFeatureDisabled" xml:space="preserve">
-    <value>La funzionalità 'IOperation' è disabilitata.</value>
   </data>
   <data name="AbsolutePathExpected" xml:space="preserve">
     <value>È previsto il percorso assoluto.</value>
@@ -497,9 +497,6 @@
   </data>
   <data name="TupleElementNameEmpty" xml:space="preserve">
     <value>Il nome di elemento di tupla non può essere una stringa vuota.</value>
-  </data>
-  <data name="EmbeddedTextsRequirePortablePdb" xml:space="preserve">
-    <value>I testi incorporati sono supportati solo quando si crea il PDB portatile.</value>
   </data>
   <data name="InvalidOutputKindForSubmission" xml:space="preserve">
     <value>Il tipo di output per l'invio non è valido. È previsto DynamicallyLinkedLibrary.</value>
