--- a/src/cli-deps-satellites/src/Microsoft.CodeAnalysis/Microsoft.CodeAnalysis.CodeAnalysisResources.ja.resx
+++ b/src/cli-deps-satellites/src/Microsoft.CodeAnalysis/Microsoft.CodeAnalysis.CodeAnalysisResources.ja.resx
@@ -178,6 +178,9 @@
   <data name="Class1" xml:space="preserve">
     <value>クラス</value>
   </data>
+  <data name="EmbeddedTextsRequirePdb" xml:space="preserve">
+    <value>埋め込みのテキストは、PDB の生成時にのみサポートされます。</value>
+  </data>
   <data name="ModuleCopyCannotBeUsedToCreateAssemblyMetadata" xml:space="preserve">
     <value>モジュールのコピーは、アセンブリ メタデータの作成には使用できません。</value>
   </data>
@@ -231,9 +234,6 @@
   </data>
   <data name="KeepAliveIsTooSmall" xml:space="preserve">
     <value>-1 より小さい '/keepalive' オプションへの引数は無効です。</value>
-  </data>
-  <data name="IOperationFeatureDisabled" xml:space="preserve">
-    <value>機能 'IOperation' は無効になっています。</value>
   </data>
   <data name="AbsolutePathExpected" xml:space="preserve">
     <value>絶対パスが必要です。</value>
@@ -497,9 +497,6 @@
   </data>
   <data name="TupleElementNameEmpty" xml:space="preserve">
     <value>タプル要素名を空の文字列にすることはできません。</value>
-  </data>
-  <data name="EmbeddedTextsRequirePortablePdb" xml:space="preserve">
-    <value>埋め込みのテキストは、ポータブル PDB の生成時にのみサポートされます。</value>
   </data>
   <data name="InvalidOutputKindForSubmission" xml:space="preserve">
     <value>送信の出力の種類が無効です。DynamicallyLinkedLibrary が必要です。</value>
