--- a/src/cli-deps-satellites/src/Microsoft.CodeAnalysis/Microsoft.CodeAnalysis.CodeAnalysisResources.pl.resx
+++ b/src/cli-deps-satellites/src/Microsoft.CodeAnalysis/Microsoft.CodeAnalysis.CodeAnalysisResources.pl.resx
@@ -178,6 +178,9 @@
   <data name="Class1" xml:space="preserve">
     <value>klasa</value>
   </data>
+  <data name="EmbeddedTextsRequirePdb" xml:space="preserve">
+    <value>Osadzony tekst jest obsługiwany tylko w przypadku emitowania pliku PDB.</value>
+  </data>
   <data name="ModuleCopyCannotBeUsedToCreateAssemblyMetadata" xml:space="preserve">
     <value>Nie można użyć kopii modułu do utworzenia metadanych zestawu.</value>
   </data>
@@ -231,9 +234,6 @@
   </data>
   <data name="KeepAliveIsTooSmall" xml:space="preserve">
     <value>Argumenty opcji „/keepalive” mniejsze niż -1 są nieprawidłowe.</value>
-  </data>
-  <data name="IOperationFeatureDisabled" xml:space="preserve">
-    <value>Funkcja „IOperation” została wyłączona.</value>
   </data>
   <data name="AbsolutePathExpected" xml:space="preserve">
     <value>Oczekiwano ścieżki bezwzględnej.</value>
@@ -497,9 +497,6 @@
   </data>
   <data name="TupleElementNameEmpty" xml:space="preserve">
     <value>Nazwa elementu krotki nie może być pustym ciągiem.</value>
-  </data>
-  <data name="EmbeddedTextsRequirePortablePdb" xml:space="preserve">
-    <value>Osadzony tekst jest obsługiwany tylko w przypadku emitowania przenośnego pliku PDB.</value>
   </data>
   <data name="InvalidOutputKindForSubmission" xml:space="preserve">
     <value>Nieprawidłowy rodzaj wyjścia przesłanego elementu. Oczekiwano elementu DynamicallyLinkedLibrary.</value>
