--- a/src/cli-deps-satellites/src/Microsoft.CodeAnalysis/Microsoft.CodeAnalysis.CodeAnalysisResources.zh-Hans.resx
+++ b/src/cli-deps-satellites/src/Microsoft.CodeAnalysis/Microsoft.CodeAnalysis.CodeAnalysisResources.zh-Hans.resx
@@ -178,6 +178,9 @@
   <data name="Class1" xml:space="preserve">
     <value>类</value>
   </data>
+  <data name="EmbeddedTextsRequirePdb" xml:space="preserve">
+    <value>仅在发出 PDB 时才支持嵌入的文本。</value>
+  </data>
   <data name="ModuleCopyCannotBeUsedToCreateAssemblyMetadata" xml:space="preserve">
     <value>模块复制不能用于创建程序集元数据。</value>
   </data>
@@ -231,9 +234,6 @@
   </data>
   <data name="KeepAliveIsTooSmall" xml:space="preserve">
     <value>小于 -1 的 "/keepalive" 选项的参数无效。</value>
-  </data>
-  <data name="IOperationFeatureDisabled" xml:space="preserve">
-    <value>功能 "IOperation" 已禁用。</value>
   </data>
   <data name="AbsolutePathExpected" xml:space="preserve">
     <value>预期的绝对路径。</value>
@@ -497,9 +497,6 @@
   </data>
   <data name="TupleElementNameEmpty" xml:space="preserve">
     <value>元组元素名称不能为空字符串。</value>
-  </data>
-  <data name="EmbeddedTextsRequirePortablePdb" xml:space="preserve">
-    <value>仅在发出可移植 PDB 时支持嵌入的文本。</value>
   </data>
   <data name="InvalidOutputKindForSubmission" xml:space="preserve">
     <value>无效的提交输出类型。预期为 DynamicallyLinkedLibrary。</value>
